src/hoppet/fortran_prototypes.h

#define DEFINE_RETURN_INT_MEMBER(classname, membername)           extern "C" int            hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_LOG_MEMBER(classname, membername)           extern "C" bool           hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_DBL_MEMBER(classname, membername)           extern "C" double         hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_INT_MEMBER_I(classname, membername)         extern "C" int            hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i);
#define DEFINE_RETURN_DBL_MEMBER_I(classname, membername)         extern "C" double         hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i);
#define DEFINE_RETURN_OBJ_MEMBER(classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_OBJ_MEMBER_I( classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i);
#define DEFINE_RETURN_OBJ_MEMBER_IJ(classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i, int j);
#define DEFINE_DELETE(classname) \
   extern "C" void hoppet_cxx__##classname##__delete(classname##_f ** ptr); \
   inline void generic_delete(classname##_f * ptr) {if (ptr) hoppet_cxx__##classname##__delete(&ptr);}
  grid_def_f * hoppet_cxx__grid_def__new(double dy, double ymax, int order, double eps);
  grid_def_f * hoppet_cxx__grid_def__new_from_grids(const grid_def_f ** griddefs, int ngrids, bool locked);
  grid_def_f * hoppet_cxx__grid_def__new_default(double dy, double ymax, int order = -6);
  grid_def_f * hoppet_cxx__grid_def__copy(const grid_def_f * griddef);
  void   hoppet_cxx__grid_def__delete(grid_def_f ** griddef);
  int    hoppet_cxx__grid_def__ny(const grid_def_f * griddef);
  void   hoppet_cxx__grid_def__y_values(const grid_def_f * griddef, double * yvals);
  void   hoppet_cxx__grid_def__x_values(const grid_def_f * griddef, double * xvals);
  bool   hoppet_cxx__grid_def__equiv(const grid_def_f * griddef1, const grid_def_f * griddef2);
  void   hoppet_cxx__grid_def__monotonic_indices(const grid_def_f * griddef, int * indices, int & nindices);
DEFINE_RETURN_DBL_MEMBER(grid_def,dy)
DEFINE_RETURN_DBL_MEMBER(grid_def,ymax)
DEFINE_RETURN_DBL_MEMBER(grid_def,eps)
DEFINE_RETURN_INT_MEMBER(grid_def,nsub)
DEFINE_RETURN_INT_MEMBER(grid_def,order)
DEFINE_RETURN_LOG_MEMBER(grid_def,locked)
DEFINE_RETURN_OBJ_MEMBER_I(grid_def,subgd,grid_def)
DEFINE_RETURN_INT_MEMBER_I(grid_def,subiy)
inline void generic_delete(grid_def_f * ptr) {if (ptr) hoppet_cxx__grid_def__delete(&ptr);}
  grid_quant_f * hoppet_cxx__grid_quant__new(const grid_def_f * griddef);
  void   hoppet_cxx__grid_quant__delete(grid_quant_f ** gridquant);
DEFINE_DELETE(grid_conv)
//inline void generic_delete(grid_conv_f * ptr) {if (ptr)hoppet_cxx__grid_conv__delete(&ptr);}
inline grid_conv_f * generic_copy(const grid_conv_f * ptr) {return hoppet_cxx__grid_conv__new_from_gc(ptr);}
//  if (ptr)  return hoppet_cxx__grid_conv__new_from_gc(ptr); else return nullptr;}
DEFINE_RETURN_OBJ_MEMBER(grid_conv,grid,grid_def)
DEFINE_RETURN_OBJ_MEMBER_I(grid_conv,subgc,grid_conv)


/// split_mat function wrappers
extern "C" {
DEFINE_COPY(mass_threshold_mat)
DEFINE_DELETE(mass_threshold_mat)

#define MTM_REF(NAME)  DEFINE_RETURN_OBJ_MEMBER(mass_threshold_mat,NAME,split_mat)
DEFINE_DELETE(dglap_holder)
DEFINE_RETURN_INT_MEMBER(dglap_holder,nloop)
DEFINE_RETURN_INT_MEMBER(dglap_holder,nf)
DEFINE_RETURN_INT_MEMBER(dglap_holder,factscheme)
DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allp,split_mat)
DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allmtm,mass_threshold_mat)

DEFINE_RETURN_OBJ_MEMBER(dglap_holder,grid,grid_def)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_lo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nlo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nnlo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_n3lo,split_mat)

//----- things for pdfseginfo ----------
DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_lo)
DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_hi)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_lo)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_hi)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,dlnlnQ)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,inv_dlnlnQ)

//----- things for pdf_table ----------
extern "C" {
DEFINE_COPY(pdf_table)
DEFINE_DELETE(pdf_table)

DEFINE_RETURN_OBJ_MEMBER(pdf_table,grid,grid_def)
DEFINE_RETURN_INT_MEMBER(pdf_table,nQ)
DEFINE_RETURN_INT_MEMBER(pdf_table,tab_iflv_max)
DEFINE_RETURN_INT_MEMBER(pdf_table,lnlnQ_order)
DEFINE_RETURN_LOG_MEMBER(pdf_table,freeze_at_Qmin)
DEFINE_RETURN_LOG_MEMBER(pdf_table,nf_info_associated)
DEFINE_RETURN_INT_MEMBER(pdf_table,nflo)
DEFINE_RETURN_INT_MEMBER(pdf_table,nfhi)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_min)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_max)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lambda_eff)
DEFINE_RETURN_DBL_MEMBER(pdf_table,dlnlnQ)
DEFINE_RETURN_OBJ_MEMBER(pdf_table,seginfo_no_nf,pdfseginfo)

DEFINE_RETURN_OBJ_MEMBER_I(pdf_table,seginfo,pdfseginfo)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,as2pi)
DEFINE_RETURN_INT_MEMBER_I(pdf_table,nf_int)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,lnlnQ_vals)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,Q_vals)

//----- things for pdf_table arrays ----------
extern "C" {
DEFINE_DELETE(pdf_table_array)

//----- generic functions 
extern "C" {