src/hoppet_cxx_oo.F90


#include "inc/ftlMacros.inc"
#include "inc/extraMacros.inc"


#define BINDC(OBJ,NAME) bind(C,name="hoppet_cxx__"//STRINGIFY(OBJ)//"__"//STRINGIFY(NAME))

! define a macro to generate the functions that returns a generic object's integer member
#define DEFINE_RETURN_INT_MEMBER(OBJ,NAME) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    integer(c_int) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = obj_f%NAME;\
  end function

  ! define a macro to generate the functions that returns a generic object's real(dp) member
#define DEFINE_RETURN_DBL_MEMBER(OBJ,NAME) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    real(c_double) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = obj_f%NAME;\
  end function

  ! define a macro to generate the functions that returns a generic object's real(dp) member
#define DEFINE_RETURN_DBL_ARR_PTR_MEMBER(OBJ,NAME) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    type(c_ptr) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = c_loc(obj_f%NAME(lbound(obj_f%NAME)));\
  end function

! define a macro to generate the functions that returns a generic object's logical member
#define DEFINE_RETURN_LOG_MEMBER(OBJ,NAME) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    logical(c_bool) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = obj_f%NAME;\
  end function

! define a macro to generate the functions that returns a generic object's integer member
#define DEFINE_RETURN_INT_MEMBER_I(OBJ,NAME) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj,i) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    integer(c_int), intent(in), value :: i;\
    integer(c_int) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = obj_f%NAME(i);\
  end function

  ! define a macro to generate the functions that returns a generic object's real(dp) member
#define DEFINE_RETURN_DBL_MEMBER_I(OBJ,NAME) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj,i) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    integer(c_int), intent(in), value :: i;\
    real(c_double) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = obj_f%NAME(i);\
  end function

#define DEFINE_RETURN_OBJ_MEMBER(OBJ,NAME,TYPE) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    type(c_ptr) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = c_loc(obj_f%NAME);\
  end function

#define DEFINE_RETURN_OBJ_MEMBER_I(OBJ,NAME,TYPE) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj,i) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    integer(c_int), intent(in), value :: i;\
    type(c_ptr) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = c_loc(obj_f%NAME(i));\
  end function

#define DEFINE_RETURN_OBJ_MEMBER_IJ(OBJ,NAME,TYPE) \
  function CAT4(hoppet_cxx__,OBJ,__,NAME)(obj,i,j) BINDC(OBJ,NAME) result(res);\
    implicit none;\
    type(c_ptr), intent(in), value :: obj;\
    integer(c_int), intent(in), value :: i,j;\
    type(c_ptr) :: res;\
    type(OBJ), pointer :: obj_f;\
    call c_f_pointer(obj, obj_f);\
    res = c_loc(obj_f%NAME(i,j));\
  end function


#define DEFINE_DELETE(OBJ) \
  subroutine CAT3(hoppet_cxx__,OBJ,__delete)(ptr) bind(C);\
    implicit none;\
    type(c_ptr), intent(inout) :: ptr;\
    type(OBJ), pointer :: f_ptr;\
    call c_f_pointer(ptr, f_ptr);\
    call delete(f_ptr);\
    deallocate(f_ptr);\
    ptr = c_null_ptr;\
  end subroutine



!=====================================================================
!! misc routines for the C++ OO interface, for example to help with debugging
module hoppet_cxx_oo_various
  use, intrinsic :: iso_c_binding
  implicit none
contains

  !! routine to help testing: print a C-style string passed from C++
  subroutine hoppet_cxx__print_c_str(cstr_ptr) bind(C)
    use hoppet_c_f_string_utils
    use, intrinsic :: iso_c_binding
    implicit none
    type(c_ptr), intent(in), value :: cstr_ptr
    character(len=:), allocatable :: fstr
    fstr = fortran_string_from_cstr(cstr_ptr)
    print '(a)', "START:"//fstr//":END"
  end subroutine hoppet_cxx__print_c_str

end module hoppet_cxx_oo_various

!=====================================================================
!! wrappers for C++ OO interface to grid_def
module hoppet_cxx_oo_grid_def
  use types, only: dp
  use, intrinsic :: iso_c_binding
  use convolution
  implicit none  

contains

  !! return a c pointer to a new grid_def
  function hoppet_cxx__grid_def__new(dy,ymax,order,eps) bind(C) result(ptr)
    use convolution
    implicit none
    real(c_double), intent(in), value :: dy, ymax
    integer(c_int), intent(in), value :: order
    real(c_double), intent(in), value :: eps
    type(c_ptr) :: ptr
    !--
    real(dp)  :: f_dy, f_ymax
    integer   :: f_order
    real(dp)  :: f_eps
    type(grid_def), pointer :: f_ptr

    allocate(f_ptr)
    f_dy   = dy
    f_ymax = ymax
    f_order= order
    f_eps  = eps
    call InitGridDef(f_ptr, f_dy, f_ymax, f_order, f_eps)
    ptr = c_loc(f_ptr)
  end function hoppet_cxx__grid_def__new

  !! return a c pointer to a copy of the (grid_c_ptr) grid_def
  function hoppet_cxx__grid_def__copy(grid_c_ptr) bind(C) result(ptr)
    use convolution
    implicit none
    type(c_ptr),  intent(in), value :: grid_c_ptr
    type(c_ptr) :: ptr
    !----------------------
    type(grid_def), pointer :: grid_ptr
    type(grid_def), pointer :: f_ptr

    ! prepare fortran objects
    call c_f_pointer(grid_c_ptr, grid_ptr)
    allocate(f_ptr)

    if (associated(grid_ptr%subgd)) then
      call InitGridDef(f_ptr, grid_ptr%subgd, grid_ptr%locked)
    else
      f_ptr = grid_ptr
    end if
    ptr = c_loc(f_ptr)
  end function hoppet_cxx__grid_def__copy

  function hoppet_cxx__grid_def__new_from_grids(grid_c_ptrs, ngrids, locked) bind(C) result(ptr)
    use convolution
    implicit none
    type(c_ptr),     intent(in)        :: grid_c_ptrs(*)
    integer(c_int),  intent(in), value :: ngrids
    logical(c_bool), intent(in), value :: locked
    type(c_ptr) :: ptr
    !----------------------
    type(grid_def) :: grids(ngrids)
    type(grid_def), pointer :: grid_ptr
    type(grid_def), pointer :: f_ptr
    logical :: f_locked
    integer :: i

    ! Create a Fortran grid_def object for each grid
    do i = 1, ngrids
      call c_f_pointer(grid_c_ptrs(i), grid_ptr)
      grids(i) = grid_ptr
    end do
    f_locked = merge(.true., .false., locked)

    allocate(f_ptr)
    call InitGridDef(f_ptr, grids, f_locked)
    ptr = c_loc(f_ptr)
  end function hoppet_cxx__grid_def__new_from_grids

  function hoppet_cxx__grid_def__new_default(dy, ymax, order) bind(C) result(ptr)
    use convolution
    implicit none
    real(c_double), intent(in), value :: dy, ymax
    integer(c_int), intent(in), value :: order
    type(c_ptr) :: ptr
    !--
    real(dp)  :: f_dy, f_ymax
    integer   :: f_order
    type(grid_def), pointer :: f_ptr

    allocate(f_ptr)
    f_dy   = dy
    f_ymax = ymax
    f_order= order
    call InitGridDefDefault(f_ptr, f_dy, f_ymax, f_order)
    ptr = c_loc(f_ptr)
  end function hoppet_cxx__grid_def__new_default

  subroutine hoppet_cxx__grid_def__delete(ptr) bind(C)
    use convolution
    implicit none
    type(c_ptr), intent(inout) :: ptr
    !--
    type(grid_def), pointer :: f_ptr

    call c_f_pointer(ptr, f_ptr)
    !print * , associated(f_ptr)
    call delete(f_ptr)
    deallocate(f_ptr)
    ptr = c_null_ptr
  end subroutine hoppet_cxx__grid_def__delete

  function hoppet_cxx__grid_def__ny(ptr) bind(C) result(ny)
    use convolution
    implicit none
    type(c_ptr), intent(in), value :: ptr
    integer(c_int) :: ny
    type(grid_def), pointer :: f_ptr

    call c_f_pointer(ptr, f_ptr)
    ny = f_ptr%ny
  end function hoppet_cxx__grid_def__ny

  subroutine hoppet_cxx__grid_def__y_values(ptr, yvals) bind(C)
    use convolution
    implicit none
    type(c_ptr), intent(in), value :: ptr
    real(c_double), intent(out) :: yvals(*)
    type(grid_def), pointer :: grid

    call c_f_pointer(ptr, grid)
    yvals(1:grid%ny+1) = yValues(grid)
  end subroutine

  subroutine hoppet_cxx__grid_def__x_values(ptr, xvals) bind(C)
    use convolution
    implicit none
    type(c_ptr), intent(in), value :: ptr
    real(c_double), intent(out) :: xvals(*)
    type(grid_def), pointer :: grid

    call c_f_pointer(ptr, grid)
    xvals(1:grid%ny+1) = xValues(grid)
  end subroutine

  function hoppet_cxx__grid_def__equiv(grid1, grid2) bind(C) result(res)
    use convolution
    implicit none
    type(c_ptr), intent(in), value :: grid1, grid2
    logical(c_bool) :: res
    type(grid_def), pointer :: grid1_f, grid2_f

    call c_f_pointer(grid1, grid1_f)
    call c_f_pointer(grid2, grid2_f)

    res = (grid1_f == grid2_f)
  end function hoppet_cxx__grid_def__equiv

  subroutine hoppet_cxx__grid_def__monotonic_indices(grid, indices, nindices) bind(C)
    use convolution
    implicit none
    type(c_ptr), intent(in), value :: grid
    integer(c_int), intent(out) :: indices(*)
    integer(c_int), intent(out) :: nindices
    !------
    type(grid_def), pointer :: grid_f
    real(dp), allocatable :: indices_f(:)
    integer :: i

    call c_f_pointer(grid, grid_f)
    indices_f = MonotonicUniqueIndices(grid_f)
    nindices = size(indices_f)
    indices(1:nindices) = indices_f(:)
  end subroutine hoppet_cxx__grid_def__monotonic_indices  

  DEFINE_RETURN_DBL_MEMBER(grid_def,dy)
  DEFINE_RETURN_DBL_MEMBER(grid_def,ymax)
  DEFINE_RETURN_DBL_MEMBER(grid_def,eps)
  DEFINE_RETURN_INT_MEMBER(grid_def,nsub)
  DEFINE_RETURN_INT_MEMBER(grid_def,order)
  DEFINE_RETURN_LOG_MEMBER(grid_def,locked)
  DEFINE_RETURN_OBJ_MEMBER_I(grid_def,subgd,grid_def)
  DEFINE_RETURN_INT_MEMBER_I(grid_def,subiy)

end module hoppet_cxx_oo_grid_def

!=====================================================================
!! wrappers for C++ OO interface to grid quantities, with an intermediate
!! grid_quant type holds both the data and the grid_def
module hoppet_cxx_oo_grid_quant
  use types, only: dp
  use, intrinsic :: iso_c_binding
  use hoppet_cxx_oo_grid_def
  implicit none

  type grid_quant
    real(dp), pointer :: data(:) => null()
    type(grid_def)    :: grid
  end type grid_quant

contains

  function hoppet_cxx__grid_quant__new(grid_def_ptr) bind(C) result(ptr)
    implicit none
    type(c_ptr), intent(in), value :: grid_def_ptr
    type(c_ptr) :: ptr
    !--
    type(grid_quant), pointer :: f_ptr
    type(grid_def), pointer :: grid

    allocate(f_ptr)
    call c_f_pointer(grid_def_ptr, grid)
    call AllocGridQuant(grid, f_ptr%data)
    f_ptr%grid = grid
    ptr = c_loc(f_ptr)
  end function hoppet_cxx__grid_quant__new

  subroutine hoppet_cxx__grid_quant__delete(ptr) bind(C)
    implicit none
    type(c_ptr), intent(inout) :: ptr
    !--
    type(grid_quant), pointer :: f_ptr

    call c_f_pointer(ptr, f_ptr)
    if (associated(f_ptr%data)) then
      deallocate(f_ptr%data)
    end if
    !print * , associated(f_ptr)
    deallocate(f_ptr)
    ptr = c_null_ptr
  end subroutine hoppet_cxx__grid_quant__delete
